# FeatherFifo

./: .gitignore  .gitmodules  CMakeLists.txt  FeatherFifo.cpp  FeatherFifo.hpp  LICENSE  README.md  test.cpp
.github/workflows/: cmake.yml
include/: CMakeLists.txt  FeatherFifo.hpp  config.hpp.in
src/: CMakeLists.txt  FeatherFifo.cpp
tests/: CMakeLists.txt  test.cpp
